<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08012D">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_back_bower"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back_bower"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top_bower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_try_to_guess_bower"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/try_to_guess"
        android:textColor="#9AA9C0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top_bower"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_bower"
        app:layout_constraintStart_toEndOf="@+id/image_view_back_bower"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom_bower"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_bower"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_bower"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_bower"
        app:strokeColor="@color/primary"
        app:strokeWidth="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_turn_bower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#08012D"
            android:padding="4dp"
            tools:listitem="@layout/item_turn_bower" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout_guess_bower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_guess_here"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:endIconContentDescription="@string/edit_text_guess_icon_description"
        app:endIconDrawable="@drawable/ic_chek_bower"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_bower"
        app:layout_constraintStart_toEndOf="@+id/guideline_start_bower"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom_bower">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_guess_bower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textSize="21sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_bower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_bower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_bower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_bower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>